[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Frederic Vogels <frederic.vogels+github@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
